@@ -431,8 +431,7 @@ toggle the state (fold/unfold) of the current tree
 </b></dt>
 <dd>
         Move the current buddy to the requested group.  If no group is
-        specified, then the buddy is moved to the default group.
-        This command only works with users (not agents), at the moment.<br />
+        specified, then the buddy is moved to the default group.<br />
         Tip: if the chatmode is enabled, you can use "/roster alternate"
         to jump to the moved buddy.
 </dd>
@@ -776,6 +775,12 @@ jump to the next unread message
         too.<br />
         Note: The jid can include a resource (i.e. user@server/resource).
 </dd>
+<dt><b>
+/version
+</b></dt>
+<dd>
+        Display mcabber version
+</dd>
 </dl>
 <h2>CONFIGURATION FILE</h2>
 <p>See the provided sample configuration file, which should be self-documented.</p>
@@ -800,7 +805,7 @@ License (GPL).</p>
 <div id="footer">
 <p>
 Version 0.7.2-dev<br />
-Last updated 16-Dec-2005 16:12:33 CEST
+Last updated 17-Dec-2005 00:25:13 CEST
 </p>
 </div>
 </div>
