@@ -162,8 +162,7 @@ COMMANDS
 
 /move [groupname]::
         Move the current buddy to the requested group.  If no group is
-        specified, then the buddy is moved to the default group.
-        This command only works with users (not agents), at the moment. +
+        specified, then the buddy is moved to the default group. +
         Tip: if the chatmode is enabled, you can use "/roster alternate"
         to jump to the moved buddy.
 
@@ -257,6 +256,9 @@ COMMANDS
         If you are using the auto-away feature, the status will overridden
         too. +
         Note: The jid can include a resource (i.e. user@server/resource).
+
+/version::
+        Display mcabber version
 
 CONFIGURATION FILE
 ------------------
